Refactored to split datanode and client (hdfs) relations

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -10,5 +10,6 @@ tags: ["applications", "bigdata", "hadoop", "apache"]
 provides:
   hdfs:
     interface: hdfs
-  ganglia:
-    interface: monitor
+requires:
+  datanode:
+    interface: datanode
