--- a/actions.yaml
+++ b/actions.yaml
@@ -6,3 +6,34 @@ restart-hdfs:
     description: All of the HDFS processes can be restarted with this Juju action.
 smoke-test:
     description: Verify that HDFS is working by creating and removing a small file.
+nnbench:
+    description: Load test the NameNode hardware and configuration
+    params: 
+        maps:
+                description: number of map jobs
+                type: integer
+                default: 12
+        reduces:
+                description: number of reduces
+                type: integer
+                default: 6
+        blocksize:
+                description: block size
+                type: integer
+                default: 1
+        bytes:
+                description: bytes to write
+                type: integer
+                default: 0
+        numfiles:
+                description: number of files
+                type: integer
+                default: 0 
+        repfactor:
+                description: replication factor per file
+                type: integer
+                default: 3
+        basedir:
+                description: DFS working directory with hostname automatically appended
+                type: string
+                default: "/benchmarks/NNBench"
