--- a/actions.yaml
+++ b/actions.yaml
@@ -37,3 +37,27 @@ nnbench:
                 description: DFS working directory with hostname automatically appended
                 type: string
                 default: "/benchmarks/NNBench"
+testdfsio:
+    description: DFS IO Testing
+    params: 
+        mode:
+                description: read or write IO test
+                type: string
+                default: "write"
+                enum: [read,write]
+        numfiles:
+                description: number of files 
+                type: integer
+                default: 10 
+        filesize:
+                description: filesize in MB
+                type: integer
+                default: 1000
+        resfile:
+                description: Results file name
+                type: string
+                default: "/tmp/TestDFSIO_results.log"
+        buffersize:
+                description: Buffer size in bytes
+                type: integer
+                default: 1000000 
