--- a/metadata.yaml
+++ b/metadata.yaml
@@ -15,6 +15,8 @@ provides:
 requires:
   datanode:
     interface: dfs-slave
+  zookeeper:
+    interface: zookeeper
 peers:
   namenode-cluster:
     interface: namenode-cluster
