--- a/layer.yaml
+++ b/layer.yaml
@@ -1,3 +1,4 @@
+repo: git@github.com:juju-solutions/layer-apache-hadoop-namenode.git
 includes:
   - 'layer:hadoop-base'
   - 'layer:hadoop-ganglia'
