--- a/actions.yaml
+++ b/actions.yaml
@@ -22,6 +22,8 @@ stop-hdfs:
     description: All of the HDFS processes can be stopped with this Juju action.
 restart-hdfs:
     description: All of the HDFS processes can be restarted with this Juju action.
+restart-zkfc:
+    description: Restart the hadoop zookeeper daemon (zkfc)
 smoke-test:
     description: Verify that HDFS is working by creating and removing a small file.
 nnbench:
